<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StartActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/burrgar"
        android:gravity="center_horizontal"
        android:layout_marginTop="100dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/start_activity_line"
        android:textAlignment="center"
        android:fontFamily="@font/lato"
        android:textColor="@color/text_dark_green"/>
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:id="@+id/btnLogin"
            android:text="@string/btn_Login"
            android:textColor="@color/white"
            android:fontFamily="@font/lato"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:background="@drawable/greenbuttongradient"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:id="@+id/btnSignup"
            android:text="@string/btn_Signup"
            android:textColor="@color/white"
            android:fontFamily="@font/lato"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/greenbuttongradient"/>

    </LinearLayout>
2
</LinearLayout>